<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space.30">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/idProfil"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space.4"
        android:src="@drawable/ic_user"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space.5"
        android:text="@string/txt_name"
        android:textSize="@dimen/space.10" />

    <LinearLayout
        android:id="@+id/idLyEditProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_editprofil"
            android:textSize="@dimen/font.10" />

        <ImageView
            android:layout_width="@dimen/space.20"
            android:layout_height="@dimen/space.20"
            android:layout_gravity="right"
            android:src="@drawable/ic_arrow" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txt_names" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txt_mobilenumber" />


    <RelativeLayout
        android:id="@+id/idRlSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/idImageMobileNumber"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_indonesia" />

        <EditText
            android:id="@+id/idCodeCountry"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/idImageMobileNumber"
            android:hint="+62" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/idCodeCountry"
            android:hint="89678002621" />


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txt_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="email@gmail.com" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txt_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="***********" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txt_feedback"
        android:textColor="@color/orange"
        android:textSize="@dimen/font.12" />


<!--        <LinearLayout-->
<!--            android:id="@+id/idLiniearLayoutLogin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="@dimen/space.20"-->
<!--            android:background="@drawable/button"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="5dp">-->

<!--            <TextView-->
<!--                android:id="@+id/idTxtLogin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="@string/txt_save"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="@dimen/space.15" />-->

<!--        </LinearLayout>-->

</LinearLayout>